// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotosCount should show photo count value equal to 99 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "height": 24,
          "width": 24,
        },
        false,
      ],
    ]
  }
  testID="photo-count"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        clipRule={0}
        d="M4 5.818a4 4 0 00-4 4V20a4 4 0 004 4h10.182a4 4 0 004-4V9.818a4 4 0 00-4-4z"
        fill={4294967295}
        fillRule={1}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
      <RNSVGPath
        clipRule={0}
        d="M15.364 3.636h-9.53A4 4 0 019.818 0H20a4 4 0 014 4v10.182a4 4 0 01-3.636 3.984v-9.53a5 5 0 00-5-5z"
        fill={4294967295}
        fillRule={1}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
      <RNSVGText
        content={null}
        dx={Array []}
        dy={Array []}
        fill={4282729797}
        font={
          Object {
            "fontSize": "10",
            "textAnchor": "middle",
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
        rotate={Array []}
        x={
          Array [
            "38%",
          ]
        }
        y={
          Array [
            "77%",
          ]
        }
      >
        <RNSVGTSpan
          content="99"
          dx={Array []}
          dy={Array []}
          font={Object {}}
          rotate={Array []}
          x={Array []}
          y={Array []}
        />
      </RNSVGText>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`PhotosCount should show the correct value 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "height": 24,
          "width": 24,
        },
        false,
      ],
    ]
  }
  testID="photo-count"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        clipRule={0}
        d="M4 5.818a4 4 0 00-4 4V20a4 4 0 004 4h10.182a4 4 0 004-4V9.818a4 4 0 00-4-4z"
        fill={4294967295}
        fillRule={1}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
      <RNSVGPath
        clipRule={0}
        d="M15.364 3.636h-9.53A4 4 0 019.818 0H20a4 4 0 014 4v10.182a4 4 0 01-3.636 3.984v-9.53a5 5 0 00-5-5z"
        fill={4294967295}
        fillRule={1}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
      <RNSVGText
        content={null}
        dx={Array []}
        dy={Array []}
        fill={4282729797}
        font={
          Object {
            "fontSize": "10",
            "textAnchor": "middle",
          }
        }
        propList={
          Array [
            "fill",
          ]
        }
        rotate={Array []}
        x={
          Array [
            "38%",
          ]
        }
        y={
          Array [
            "77%",
          ]
        }
      >
        <RNSVGTSpan
          content="14"
          dx={Array []}
          dy={Array []}
          font={Object {}}
          rotate={Array []}
          x={Array []}
          y={Array []}
        />
      </RNSVGText>
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
